fixed nextjs missmatches

--- a/content/blog/2024-05-12-building-a-scalable-contact-form-in-a-next-js-migration-lessons-from-austinselit.mdx
+++ b/content/blog/2024-05-12-building-a-scalable-contact-form-in-a-next-js-migration-lessons-from-austinselit.mdx
@@ -2,7 +2,7 @@
 title: "Building a Scalable Contact Form in a Next.js Migration: Lessons from AustinsElite"
 date: "2024-05-12"
 excerpt: "How we integrated a resilient contact form into a Next.js frontend while bridging a Laravel 12 backend during the AustinsElite migration."
-tags: ["Next.js", "Laravel", "Form Integration", "Frontend Migration", "API Routes", "Sanctum"]
+tags: ["Laravel", "Form Integration", "Frontend Migration", "API Routes", "Sanctum", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Setting Up the Contact Page in a Hybrid World
