--- a/content/blog/2024-05-15-building-a-vendor-ad-system-in-a-laravel-stack-from-filament-resources-to-fronte.mdx
+++ b/content/blog/2024-05-15-building-a-vendor-ad-system-in-a-laravel-stack-from-filament-resources-to-fronte.mdx
@@ -2,7 +2,7 @@
 title: "Building a Vendor Ad System in a Laravel Stack: From Filament Resources to Frontend Integration"
 date: "2024-05-15"
 excerpt: "How I built a vendor ad system using Laravel 12 and Filament v4, then surfaced it in a Next.js frontend via API integration."
-tags: ["Laravel", "Filament", "Next.js", "Full-Stack", "Eloquent", "API Integration"]
+tags: ["Laravel", "Filament", "Full-Stack", "Eloquent", "API Integration", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Setting Up Eloquent Models for Vendors and Ads
