--- a/content/blog/2024-06-12-how-we-solved-form-to-email-delivery-with-dynamic-signatures-in-next-js.mdx
+++ b/content/blog/2024-06-12-how-we-solved-form-to-email-delivery-with-dynamic-signatures-in-next-js.mdx
@@ -2,7 +2,7 @@
 title: "How We Solved Form-to-Email Delivery with Dynamic Signatures in Next.js"
 date: "2024-06-12"
 excerpt: "A real-world breakdown of building reliable form-to-email workflows with dynamic signatures using Next.js API routes and serverless functions."
-tags: ["Next.js", "form handling", "serverless functions", "email integration", "frontend engineering"]
+tags: ["form handling", "serverless functions", "email integration", "frontend engineering", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Breaking Down the Form Submission Flow
