--- a/content/blog/2024-06-13-how-we-built-a-dynamic-sitemap-generator-in-next-js-for-seo-at-scale.mdx
+++ b/content/blog/2024-06-13-how-we-built-a-dynamic-sitemap-generator-in-next-js-for-seo-at-scale.mdx
@@ -2,7 +2,7 @@
 title: "How We Built a Dynamic Sitemap Generator in Next.js for SEO at Scale"
 date: "2024-06-13"
 excerpt: "We built a dynamic sitemap generator in Next.js to keep SEO sharp as content grows—here's how it works under the hood."
-tags: ["Next.js", "SEO", "Sitemaps", "Performance", "Automation"]
+tags: ["SEO", "Sitemaps", "Performance", "Automation", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The SEO Problem No One Talks About
