--- a/content/blog/2024-06-15-why-we-removed-environment-guards-from-analytics-script-injection.mdx
+++ b/content/blog/2024-06-15-why-we-removed-environment-guards-from-analytics-script-injection.mdx
@@ -2,7 +2,7 @@
 title: "Why We Removed Environment Guards from Analytics Script Injection"
 date: "2024-06-15"
 excerpt: "We stopped conditionally loading Google Analytics based on environment—here's why that made our tracking more reliable and easier to test."
-tags: ["Next.js", "Analytics", "Debugging", "Frontend", "GA4", "JavaScript"]
+tags: ["Analytics", "Debugging", "Frontend", "GA4", "JavaScript", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem with Environment-Based Analytics Loading
