--- a/content/blog/2024-06-16-how-we-fixed-broken-redirects-and-streamlined-sitemap-generation-in-next-js.mdx
+++ b/content/blog/2024-06-16-how-we-fixed-broken-redirects-and-streamlined-sitemap-generation-in-next-js.mdx
@@ -2,7 +2,7 @@
 title: "How We Fixed Broken Redirects and Streamlined Sitemap Generation in Next.js"
 date: "2024-06-16"
 excerpt: "Fixing legacy redirects and cleaning up sitemap logic in our Next.js frontend while syncing with Laravel 12 backend routes."
-tags: ["Next.js", "Laravel", "SEO", "Routing", "Sitemaps"]
+tags: ["Laravel", "SEO", "Routing", "Sitemaps", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Broken Legacy Redirects After Migration
