--- a/content/blog/2024-06-17-renaming-fields-respecting-trademarks-a-tiny-ux-and-legal-win-in-form-design.mdx
+++ b/content/blog/2024-06-17-renaming-fields-respecting-trademarks-a-tiny-ux-and-legal-win-in-form-design.mdx
@@ -2,7 +2,7 @@
 title: "Renaming Fields, Respecting Trademarks: A Tiny UX and Legal Win in Form Design"
 date: "2024-06-17"
 excerpt: "A small form tweak in AustinsElite—renaming a field due to trademark rules—taught me big lessons in legal-aware UX and semantic clarity."
-tags: ["form design", "Next.js", "Laravel", "UX", "validation", "frontend"]
+tags: ["form design", "Laravel", "UX", "validation", "frontend", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The ‘Zip Code’ Field That Wasn’t (And Why It Matters)
