--- a/content/blog/2024-06-21-unbreaking-seo-how-we-fixed-our-sitemap-and-robots-txt-in-next-js.mdx
+++ b/content/blog/2024-06-21-unbreaking-seo-how-we-fixed-our-sitemap-and-robots-txt-in-next-js.mdx
@@ -2,7 +2,7 @@
 title: "Unbreaking SEO: How We Fixed Our Sitemap and Robots.txt in Next.js"
 date: "2024-06-21"
 excerpt: "A quick post-mortem on how we caught and fixed a critical sitemap and robots.txt regression before launch."
-tags: ["Next.js", "SEO", "Sitemap", "robots.txt", "Google Search Console"]
+tags: ["SEO", "Sitemap", "robots.txt", "Google Search Console"]
 author: "Ryan Dashwood"
 ---
 ## The Sitemap That Wasn’t There
