--- a/content/blog/2024-06-26-how-we-cut-our-hero-image-size-by-95-without-losing-quality.mdx
+++ b/content/blog/2024-06-26-how-we-cut-our-hero-image-size-by-95-without-losing-quality.mdx
@@ -2,7 +2,7 @@
 title: "How We Cut Our Hero Image Size by 95% Without Losing Quality"
 date: "2024-06-26"
 excerpt: "Reduced a 1.01 MB hero image to 53.5 KB using WebP conversion—without sacrificing visual fidelity."
-tags: ["Next.js", "image optimization", "WebP", "performance", "core web vitals"]
+tags: ["image optimization", "WebP", "performance", "core web vitals", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: A 1MB PNG Holding Back Our Page
