--- a/content/blog/2024-06-27-how-we-solved-a-sticky-header-transition-loop-in-next-js-with-scroll-threshold-l.mdx
+++ b/content/blog/2024-06-27-how-we-solved-a-sticky-header-transition-loop-in-next-js-with-scroll-threshold-l.mdx
@@ -2,7 +2,7 @@
 title: "How We Solved a Sticky Header Transition Loop in Next.js with Scroll Threshold Logic"
 date: "2024-06-27"
 excerpt: "Fixed a flickering sticky header in Next.js by replacing naive scroll checks with a threshold-based debounce pattern."
-tags: ["Next.js", "Alpine.js", "Scroll Events", "UI Bugs", "Frontend Debugging"]
+tags: ["Alpine.js", "Scroll Events", "UI Bugs", "Frontend Debugging"]
 author: "Ryan Dashwood"
 ---
 ## The Bug That Wouldn’t Scroll Still
