--- a/content/blog/2024-06-28-designing-for-mobile-first-communication-adding-brand-consistency-across-touchpo.mdx
+++ b/content/blog/2024-06-28-designing-for-mobile-first-communication-adding-brand-consistency-across-touchpo.mdx
@@ -2,7 +2,7 @@
 title: "Designing for Mobile-First Communication: Adding Brand Consistency Across Touchpoints"
 date: "2024-06-28"
 excerpt: "How I brought brand consistency to AustinsElite by crafting responsive, mobile-optimized email templates that mirror the site’s frontend experience."
-tags: ["Next.js", "Laravel", "Email Design", "Responsive Design", "Brand Consistency", "Tailwind CSS"]
+tags: ["Laravel", "Email Design", "Responsive Design", "Brand Consistency", "Tailwind CSS", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## From Forgotten Footer to Branded Experience
