--- a/content/blog/2024-07-28-validating-time-how-we-enforced-event-date-logic-in-a-next-js-multi-step-form.mdx
+++ b/content/blog/2024-07-28-validating-time-how-we-enforced-event-date-logic-in-a-next-js-multi-step-form.mdx
@@ -2,7 +2,7 @@
 title: "Validating Time: How We Enforced Event Date Logic in a Next.js Multi-Step Form"
 date: "2024-07-28"
 excerpt: "How we built reusable, conditional date validation for a multi-step form in Next.js using React Hook Form and Zod—decoupled for testability."
-tags: ["Next.js", "React Hook Form", "Zod", "form validation", "TypeScript"]
+tags: ["React Hook Form", "Zod", "form validation", "TypeScript", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Breaking Down the Form Architecture
