--- a/content/blog/2024-08-19-building-reusable-mobile-first-step-components-in-next-js-for-multi-step-forms.mdx
+++ b/content/blog/2024-08-19-building-reusable-mobile-first-step-components-in-next-js-for-multi-step-forms.mdx
@@ -2,7 +2,7 @@
 title: "Building Reusable, Mobile-First Step Components in Next.js for Multi-Step Forms"
 date: "2024-08-19"
 excerpt: "How we built a flexible, responsive step component in Laravel 12 to unify multi-step form UX across devices at AustinsElite."
-tags: ["Next.js", "React", "Form Design", "Responsive UI", "Component Architecture"]
+tags: ["React", "Form Design", "Responsive UI", "Component Architecture", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Fragmented UX Across Devices
