--- a/content/blog/2024-10-21-how-we-built-dynamic-pdf-generation-and-email-attachment-in-a-laravel-12-next-js.mdx
+++ b/content/blog/2024-10-21-how-we-built-dynamic-pdf-generation-and-email-attachment-in-a-laravel-12-next-js.mdx
@@ -2,7 +2,7 @@
 title: "How We Built Dynamic PDF Generation and Email Attachment in a Laravel 12 + Next.js Stack"
 date: "2024-10-21"
 excerpt: "Here's how we implemented dynamic PDF generation for event contracts in Laravel, attached them to emails, and debugged delivery issues in production."
-tags: ["Laravel", "Next.js", "PDF Generation", "Email Integration", "Full-Stack Development"]
+tags: ["Laravel", "PDF Generation", "Email Integration", "Full-Stack Development", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Setting Up Dynamic PDF Generation in Laravel with Blade Templates
