--- a/content/blog/2024-12-06-ensuring-reliable-pdf-downloads-in-hybrid-next-js-livewire-apps-with-alpine-js-d.mdx
+++ b/content/blog/2024-12-06-ensuring-reliable-pdf-downloads-in-hybrid-next-js-livewire-apps-with-alpine-js-d.mdx
@@ -2,7 +2,7 @@
 title: "Ensuring Reliable PDF Downloads in Hybrid Next.js + Livewire Apps with Alpine.js Delays"
 date: "2024-12-06"
 excerpt: "A 100ms Alpine.js delay fixed a race condition between Livewire actions and session updates during PDF downloads."
-tags: ["Livewire", "Alpine.js", "Next.js", "Race Condition", "Frontend Optimization", "Laravel"]
+tags: ["Livewire", "Alpine.js", "Race Condition", "Frontend Optimization", "Laravel", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Silent Race Condition That Broke PDF Downloads
