--- a/content/blog/2025-01-10-how-we-used-index-specific-hero-images-to-improve-user-context-in-next-js.mdx
+++ b/content/blog/2025-01-10-how-we-used-index-specific-hero-images-to-improve-user-context-in-next-js.mdx
@@ -2,7 +2,7 @@
 title: "How We Used Index-Specific Hero Images to Improve User Context in Next.js"
 date: "2025-01-10"
 excerpt: "Small design tweaks like dynamic hero images per service page can dramatically improve user orientation during a Laravel-to-Next.js migration."
-tags: ["Next.js", "UI Engineering", "Migration", "Developer Experience", "Frontend Optimization"]
+tags: ["UI Engineering", "Migration", "Developer Experience", "Frontend Optimization", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Generic Hero Images, Lost Context
