--- a/content/blog/2025-01-12-from-blade-to-react-how-we-migrated-a-legacy-services-section-to-next-js-with-al.mdx
+++ b/content/blog/2025-01-12-from-blade-to-react-how-we-migrated-a-legacy-services-section-to-next-js-with-al.mdx
@@ -2,7 +2,7 @@
 title: "From Blade to React: How We Migrated a Legacy Services Section to Next.js with Alpine.js for State"
 date: "2025-01-12"
 excerpt: "Migrating AustinsElite’s services section from Laravel Livewire/Blade to Laravel 12 using Alpine.js for lightweight interactivity and Tailwind-powered animations."
-tags: ["Next.js", "Alpine.js", "Laravel", "frontend migration", "Tailwind CSS", "Livewire"]
+tags: ["Alpine.js", "Laravel", "frontend migration", "Tailwind CSS", "Livewire", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Breaking Free from the Livewire Treadmill
