--- a/content/blog/2025-02-07-how-we-built-a-self-service-brand-kit-page-in-next-js-and-why-it-matters-for-dev.mdx
+++ b/content/blog/2025-02-07-how-we-built-a-self-service-brand-kit-page-in-next-js-and-why-it-matters-for-dev.mdx
@@ -2,7 +2,7 @@
 title: "How We Built a Self-Service Brand Kit Page in Next.js (And Why It Matters for Developer Advocacy)"
 date: "2025-02-07"
 excerpt: "We launched a self-service brand kit with optimized assets and automated ZIP generation—here’s how we did it in Next.js."
-tags: ["Next.js", "Developer Experience", "Asset Optimization", "Static Export", "Build Automation", "Brand Systems"]
+tags: ["Developer Experience", "Asset Optimization", "Static Export", "Build Automation", "Brand Systems", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Why a Brand Kit Isn’t Just for Designers
