--- a/content/blog/2025-02-18-from-clutter-to-clarity-refactoring-a-homepage-feature-section-with-animated-com.mdx
+++ b/content/blog/2025-02-18-from-clutter-to-clarity-refactoring-a-homepage-feature-section-with-animated-com.mdx
@@ -2,7 +2,7 @@
 title: "From Clutter to Clarity: Refactoring a Homepage Feature Section with Animated, Component-Driven Design"
 date: "2025-02-18"
 excerpt: "How we replaced rigid Blade templates with dynamic, animated React components to modernize AustinsElite's homepage and boost engagement."
-tags: ["Next.js", "component design", "UI refactoring", "Tailwind CSS", "animation", "Laravel"]
+tags: ["component design", "UI refactoring", "Tailwind CSS", "animation", "Laravel", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Static, Brittle Markup Holding Back the Homepage
