--- a/content/blog/2025-02-26-how-we-refactored-a-legacy-homepage-into-next-js-without-breaking-seo.mdx
+++ b/content/blog/2025-02-26-how-we-refactored-a-legacy-homepage-into-next-js-without-breaking-seo.mdx
@@ -2,7 +2,7 @@
 title: "How We Refactored a Legacy Homepage into Next.js — Without Breaking SEO"
 date: "2025-02-26"
 excerpt: "Migrating a critical PHP homepage to Laravel 12 while preserving SEO, design, and performance—lessons from the AustinsElite redesign."
-tags: ["Next.js", "SEO", "migration", "Laravel", "frontend", "refactoring"]
+tags: ["SEO", "migration", "Laravel", "frontend", "refactoring", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 Back in February, we took on a deceptively simple task: rebuild the AustinsElite homepage in Laravel 12. Simple? On paper, yes. In practice? We were touching a live wire—this page drives significant organic traffic, ranks well for competitive terms, and is deeply embedded in our Laravel 12 backend ecosystem. Breaking SEO wasn’t an option.
