--- a/content/blog/2025-03-24-how-we-built-a-unified-search-across-services-products-and-templates-in-next-js.mdx
+++ b/content/blog/2025-03-24-how-we-built-a-unified-search-across-services-products-and-templates-in-next-js.mdx
@@ -2,7 +2,7 @@
 title: "How We Built a Unified Search Across Services, Products, and Templates in Next.js"
 date: "2025-03-24"
 excerpt: "Implementing global search in a hybrid Laravel-Next.js app: indexing strategies, query handling, and fixing focus UX for accessibility."
-tags: ["Next.js", "Laravel", "Global Search", "UX Optimization", "Full-Stack"]
+tags: ["Laravel", "Global Search", "UX Optimization", "Full-Stack", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Breaking Down the Search Scope: Not Just Services Anymore
