--- a/content/blog/2025-05-13-from-frustration-to-flow-how-we-fixed-form-ux-in-our-next-js-rebuild.mdx
+++ b/content/blog/2025-05-13-from-frustration-to-flow-how-we-fixed-form-ux-in-our-next-js-rebuild.mdx
@@ -2,7 +2,7 @@
 title: "From Frustration to Flow: How We Fixed Form UX in Our Next.js Rebuild"
 date: "2025-05-13"
 excerpt: "We rebuilt AustinsElite's multi-step form in Laravel 12—ditching misleading defaults and adding real-time validation to cut user drop-off."
-tags: ["Next.js", "Form UX", "Validation", "Legacy Migration", "Frontend Engineering"]
+tags: ["Form UX", "Validation", "Legacy Migration", "Frontend Engineering", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Hidden Errors, Lost Users
