--- a/content/blog/2025-05-14-how-we-decoupled-pdf-generation-in-next-js-using-queued-workers.mdx
+++ b/content/blog/2025-05-14-how-we-decoupled-pdf-generation-in-next-js-using-queued-workers.mdx
@@ -2,7 +2,7 @@
 title: "How We Decoupled PDF Generation in Next.js Using Queued Workers"
 date: "2025-05-14"
 excerpt: "We moved PDF generation out of our form flow and into a queued worker—here’s how it improved reliability and response times in our Laravel 12 app."
-tags: ["Next.js", "PDF Generation", "Background Jobs", "Form Optimization", "Performance"]
+tags: ["PDF Generation", "Background Jobs", "Form Optimization", "Performance"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Forms Were Timing Out (and Users Were Paying the Price)
