--- a/content/blog/2025-05-16-how-we-decoupled-email-and-pdf-processing-in-a-next-js-form-system-and-why-it-sa.mdx
+++ b/content/blog/2025-05-16-how-we-decoupled-email-and-pdf-processing-in-a-next-js-form-system-and-why-it-sa.mdx
@@ -2,7 +2,7 @@
 title: "How We Decoupled Email and PDF Processing in a Next.js Form System — And Why It Saved Our Logs"
 date: "2025-05-16"
 excerpt: "Breaking apart tightly coupled form side effects in Laravel 12 improved debugging, resilience, and observability during AustinsElite's critical rebuild phase."
-tags: ["Next.js", "Laravel", "form handling", "job queues", "observability"]
+tags: ["Laravel", "form handling", "job queues", "observability", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Monolith That Broke the Logs
