--- a/content/blog/2025-05-17-how-we-fixed-file-attachments-and-image-embeds-in-a-next-js-form-submission-flow.mdx
+++ b/content/blog/2025-05-17-how-we-fixed-file-attachments-and-image-embeds-in-a-next-js-form-submission-flow.mdx
@@ -2,7 +2,7 @@
 title: "How We Fixed File Attachments and Image Embeds in a Next.js Form Submission Flow"
 date: "2025-05-17"
 excerpt: "We debugged broken file uploads and image rendering in a Next.js form—here’s how proper validation, path resolution, and MIME handling saved the day."
-tags: ["Next.js", "file uploads", "form handling", "debugging", "MIME types", "image rendering"]
+tags: ["file uploads", "form handling", "debugging", "MIME types", "image rendering", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Broken Images and Missing Attachments
