--- a/content/blog/2025-05-18-migr-ing-legacy-passwords-in-a-laravel-12-next-js-stack-a-step-by-step-guide.mdx
+++ b/content/blog/2025-05-18-migr-ing-legacy-passwords-in-a-laravel-12-next-js-stack-a-step-by-step-guide.mdx
@@ -2,7 +2,7 @@
 title: "Migr游戏副本ing Legacy Passwords in a Laravel 12 + Next.js Stack: A Step-by-Step Guide"
 date: "2025-05-18"
 excerpt: "How we securely migrated legacy password hashes during the AustinsElite rebuild using Laravel 12 and a Laravel 12 frontend."
-tags: ["Laravel", "Next.js", "Authentication", "Security", "Legacy Migration"]
+tags: ["Laravel", "Authentication", "Security", "Legacy Migration", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 When rebuilding AustinsElite with a modern Laravel 12 frontend and Laravel 12 backend, we faced a common but critical challenge: thousands of users still had MD5-hashed passwords from the old system. These hashes weren’t secure by today’s standards, and we couldn’t just reset everyone’s password. Instead, we needed a seamless, secure migration path that preserved access while forcing an upgrade to modern hashing—without breaking trust.
