--- a/content/blog/2025-05-22-implementing-role-based-permissions-in-a-laravel-12-next-js-stack-using-spatie.mdx
+++ b/content/blog/2025-05-22-implementing-role-based-permissions-in-a-laravel-12-next-js-stack-using-spatie.mdx
@@ -2,7 +2,7 @@
 title: "Implementing Role-Based Permissions in a Laravel 12 + Next.js Stack Using Spatie"
 date: "2025-05-22"
 excerpt: "How I built fine-grained role-based access control in AustinsElite using Spatie Laravel Permission and a Laravel 12 frontend."
-tags: ["Laravel", "Spatie", "Next.js", "Authentication", "Role-Based Permissions", "Full-Stack"]
+tags: ["Laravel", "Spatie", "Authentication", "Role-Based Permissions", "Full-Stack", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 Last month, I dove into one of the trickiest parts of modernizing AustinsElite: replacing a brittle, hand-rolled permissions system with something scalable, auditable, and developer-friendly. The app—now running on Laravel 12 (not Next.js, despite the old label)—needed clean role-based access control for Admin, Lead, and Staff roles. On the frontend, our Laravel 12 interface had to reflect those roles in real time. Here’s how I made it work using Spatie’s Laravel Permission package and a tightly designed API layer.
