--- a/content/blog/2025-05-27-from-legacy-dates-to-us-format-consistency-how-we-enforced-regional-standards-in.mdx
+++ b/content/blog/2025-05-27-from-legacy-dates-to-us-format-consistency-how-we-enforced-regional-standards-in.mdx
@@ -2,7 +2,7 @@
 title: "From Legacy Dates to US Format Consistency: How We Enforced Regional Standards in a Full-Stack Laravel-Next.js App"
 date: "2025-05-27"
 excerpt: "How we standardized US date formatting across a Laravel-Filament-Next.js app during a legacy data migration."
-tags: ["Laravel", "Filament", "Next.js", "Date Formatting", "Legacy Migration", "Full-Stack"]
+tags: ["Laravel", "Filament", "Date Formatting", "Legacy Migration", "Full-Stack", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Date Format That Broke User Trust
