--- a/content/blog/2025-07-07-how-we-unified-a-fragmented-data-import-system-in-next-js-with-a-single-command.mdx
+++ b/content/blog/2025-07-07-how-we-unified-a-fragmented-data-import-system-in-next-js-with-a-single-command.mdx
@@ -2,7 +2,7 @@
 title: "How We Unified a Fragmented Data Import System in Next.js with a Single Command"
 date: "2025-07-07"
 excerpt: "We replaced seven scattered import scripts with one maintainable command—here’s how it improved reliability, error handling, and developer speed."
-tags: ["Next.js", "Data Import", "Refactoring", "Developer Experience", "CLI Tools"]
+tags: ["Data Import", "Refactoring", "Developer Experience", "CLI Tools", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Too Many Scripts, Too Much Chaos
