--- a/content/blog/2025-07-15-securing-forced-password-resets-in-laravel-12-handling-auth-state-across-imperso.mdx
+++ b/content/blog/2025-07-15-securing-forced-password-resets-in-laravel-12-handling-auth-state-across-imperso.mdx
@@ -2,7 +2,7 @@
 title: "Securing Forced Password Resets in Laravel 12: Handling Auth State Across Impersonation Sessions"
 date: "2025-07-15"
 excerpt: "How we fixed a critical auth flow in AustinsElite by syncing forced password resets across Laravel 12 and Laravel 12 during admin impersonation."
-tags: ["Laravel", "Next.js", "Authentication", "Security", "Filament", "Session Management"]
+tags: ["Laravel", "Authentication", "Security", "Filament", "Session Management", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Security Gaps After Legacy Migration
