--- a/content/blog/2025-07-17-building-a-hybrid-time-tracking-system-in-next-js-supporting-legacy-and-modern-s.mdx
+++ b/content/blog/2025-07-17-building-a-hybrid-time-tracking-system-in-next-js-supporting-legacy-and-modern-s.mdx
@@ -2,7 +2,7 @@
 title: "Building a Hybrid Time Tracking System in Next.js: Supporting Legacy and Modern Schemas Side-by-Side"
 date: "2025-07-17"
 excerpt: "How we evolved AustinsElite's time tracking system to support both legacy and modern schemas without breaking existing workflows."
-tags: ["Next.js", "TypeScript", "Legacy Migration", "State Management", "Full-Stack"]
+tags: ["TypeScript", "Legacy Migration", "State Management", "Full-Stack", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Two Time Tracking Models, One Interface
