--- a/content/blog/2025-09-26-how-we-added-a-poaching-clause-to-our-client-contracts-in-a-laravel-12-next-js-s.mdx
+++ b/content/blog/2025-09-26-how-we-added-a-poaching-clause-to-our-client-contracts-in-a-laravel-12-next-js-s.mdx
@@ -2,7 +2,7 @@
 title: "How We Added a Poaching Clause to Our Client Contracts in a Laravel 12 + Next.js Stack"
 date: "2025-09-26"
 excerpt: "Here's how we rolled out a legal update across both web forms and PDFs in our Laravel 12 and Next.js app—without breaking a sweat."
-tags: ["Laravel", "Next.js", "Legal Compliance", "Full-Stack", "PDF Generation"]
+tags: ["Laravel", "Legal Compliance", "Full-Stack", "PDF Generation", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Why We Needed a Poaching Clause
