--- a/content/blog/2025-10-02-why-we-upgraded-tailwind-css-in-a-legacy-next-js-app-and-what-broke.mdx
+++ b/content/blog/2025-10-02-why-we-upgraded-tailwind-css-in-a-legacy-next-js-app-and-what-broke.mdx
@@ -2,7 +2,7 @@
 title: "Why We Upgraded Tailwind CSS in a Legacy Next.js App — And What Broke"
 date: "2025-10-02"
 excerpt: "A patch-level Tailwind upgrade exposed deep CSS cascade issues in our legacy Next.js frontend — here's how we caught it and what we learned."
-tags: ["Tailwind CSS", "Next.js", "frontend", "tech debt", "dependency management"]
+tags: ["Tailwind CSS", "frontend", "tech debt", "dependency management", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Upgrade That Was Supposed to Be Boring
