--- a/content/blog/2025-10-03-adding-laravel-nightwatch-to-a-next-js-frontend-bridging-monitoring-gaps-in-hybr.mdx
+++ b/content/blog/2025-10-03-adding-laravel-nightwatch-to-a-next-js-frontend-bridging-monitoring-gaps-in-hybr.mdx
@@ -2,7 +2,7 @@
 title: "Adding Laravel Nightwatch to a Next.js Frontend: Bridging Monitoring Gaps in Hybrid PHP-React Stacks"
 date: "2025-10-03"
 excerpt: "How I integrated Laravel Nightwatch into a decoupled Next.js frontend to monitor a Laravel 12 backend and close critical observability gaps."
-tags: ["Laravel", "Next.js", "observability", "full-stack", "Nightwatch"]
+tags: ["Laravel", "observability", "full-stack", "Nightwatch", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Monitoring Blind Spot in Our Hybrid Stack
