--- a/content/blog/2025-12-31-heuristic-up-axis-detection-in-3d-animations-solving-orientation-chaos-without-m.mdx
+++ b/content/blog/2025-12-31-heuristic-up-axis-detection-in-3d-animations-solving-orientation-chaos-without-m.mdx
@@ -2,7 +2,7 @@
 title: "Heuristic Up-Axis Detection in 3D Animations: Solving Orientation Chaos Without Metadata"
 date: "2025-12-31"
 excerpt: "How I automated up-axis detection in 3D animations using skeletal movement heuristics—no metadata required."
-tags: ["3D animation", "React Three Fiber", "WebGL", "Three.js", "Next.js", "game dev"]
+tags: ["3D animation", "React Three Fiber", "WebGL", "Three.js", "game dev"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Why My Animations Kept Flipping Upside-Down
