--- a/content/blog/2026-01-01-breaking-monoliths-how-we-split-a-legacy-venue-model-into-purpose-built-services.mdx
+++ b/content/blog/2026-01-01-breaking-monoliths-how-we-split-a-legacy-venue-model-into-purpose-built-services.mdx
@@ -2,7 +2,7 @@
 title: "Breaking Monoliths: How We Split a Legacy Venue Model into Purpose-Built Services in Next.js and Laravel"
 date: "2026-01-01"
 excerpt: "We broke a bloated VenueMetadata model into focused services using domain-driven design—here’s how we did it without breaking production."
-tags: ["Laravel", "Next.js", "Domain-Driven Design", "Refactoring", "Full-Stack Development"]
+tags: ["Laravel", "Domain-Driven Design", "Refactoring", "Full-Stack Development", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Monster Called VenueMetadata
