--- a/content/blog/2026-01-02-building-a-scalable-venue-data-pipeline-in-next-js-lessons-from-austinselite.mdx
+++ b/content/blog/2026-01-02-building-a-scalable-venue-data-pipeline-in-next-js-lessons-from-austinselite.mdx
@@ -2,7 +2,7 @@
 title: "Building a Scalable Venue Data Pipeline in Laravel 12: Lessons from AustinsElite"
 date: "2026-01-02"
 excerpt: "How we evolved AustinsElite’s venue data pipeline to handle scale with batch processing, versioning, and standardized commands."
-tags: ["Next.js", "data pipeline", "batch processing", "LLM integration", "Node.js", "full-stack"]
+tags: ["data pipeline", "batch processing", "LLM integration", "Node.js", "full-stack", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Taming the Chaos: The Problem with Inconsistent Venue Data
