--- a/content/blog/2026-01-03-building-a-smart-venue-event-matching-engine-in-next-js-lessons-from-austinselit.mdx
+++ b/content/blog/2026-01-03-building-a-smart-venue-event-matching-engine-in-next-js-lessons-from-austinselit.mdx
@@ -2,7 +2,7 @@
 title: "Building a Smart Venue-Event Matching Engine in Laravel 12: Lessons from AustinsElite"
 date: "2026-01-03"
 excerpt: "How we automated legacy event-to-venue matching in Next.js using Laravel-powered console commands and robust service layers."
-tags: ["Next.js", "Laravel", "data integration", "console commands", "service layer", "legacy systems"]
+tags: ["Laravel", "data integration", "console commands", "service layer", "legacy systems", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Events Without Homes
