--- a/content/blog/2026-01-04-how-we-scaled-venue-data-processing-in-austinselite-with-iqr-based-normalization.mdx
+++ b/content/blog/2026-01-04-how-we-scaled-venue-data-processing-in-austinselite-with-iqr-based-normalization.mdx
@@ -2,7 +2,7 @@
 title: "How We Scaled Venue Data Processing in AustinsElite with IQR-Based Normalization and Caching"
 date: "2026-01-04"
 excerpt: "We cleaned noisy venue event data and boosted performance using IQR-based outlier detection and smart caching in Next.js."
-tags: ["Next.js", "data normalization", "IQR", "caching", "performance optimization", "real-world data"]
+tags: ["data normalization", "IQR", "caching", "performance optimization", "real-world data"]
 author: "Ryan Dashwood"
 ---
 ## The Messy Reality of Real-World Venue Data
