--- a/content/blog/2026-01-05-building-a-scalable-sitemap-architecture-in-next-js-from-monolith-to-modular.mdx
+++ b/content/blog/2026-01-05-building-a-scalable-sitemap-architecture-in-next-js-from-monolith-to-modular.mdx
@@ -2,7 +2,7 @@
 title: "Building a Scalable Sitemap Architecture in Next.js: From Monolith to Modular"
 date: "2026-01-05"
 excerpt: "How we broke a 38k+ URL sitemap into dynamic, domain-specific modules for better SEO and maintainability in Next.js."
-tags: ["Next.js", "SEO", "Sitemaps", "Scalability", "Jamstack", "Developer Experience"]
+tags: ["SEO", "Sitemaps", "Scalability", "Jamstack", "Developer Experience"]
 author: "Ryan Dashwood"
 ---
 ## The Breaking Point: When Our Sitemap Got Too Big
