--- a/content/blog/2026-01-06-how-we-built-a-resilient-venue-matching-system-using-fuzzy-logic-and-scoring-in-.mdx
+++ b/content/blog/2026-01-06-how-we-built-a-resilient-venue-matching-system-using-fuzzy-logic-and-scoring-in-.mdx
@@ -2,7 +2,7 @@
 title: "How We Built a Resilient Venue Matching System Using Fuzzy Logic and Scoring in Next.js"
 date: "2026-01-06"
 excerpt: "We replaced brittle exact-match venue logic with a smart scoring engine powered by libpostal and dynamic weights—here’s how."
-tags: ["Next.js", "fuzzy matching", "address normalization", "libpostal", "data quality"]
+tags: ["fuzzy matching", "address normalization", "libpostal", "data quality", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Messy Addresses, Broken Matches
