--- a/content/blog/2026-01-07-migrating-to-motia-how-we-scaled-venue-event-matching-with-ai-powered-address-no.mdx
+++ b/content/blog/2026-01-07-migrating-to-motia-how-we-scaled-venue-event-matching-with-ai-powered-address-no.mdx
@@ -2,7 +2,7 @@
 title: "Migrating to Motia: How We Scaled Venue-Event Matching with AI-Powered Address Normalization"
 date: "2026-01-07"
 excerpt: "We rebuilt our venue-event matching engine using AI-driven address normalization in Motia to fix fragmented location data at scale."
-tags: ["Next.js", "AI Integration", "System Architecture", "Address Normalization", "TypeScript", "Background Jobs"]
+tags: ["AI Integration", "System Architecture", "Address Normalization", "TypeScript", "Background Jobs", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Why Matching Venues and Events Was Breaking
