--- a/content/blog/2026-01-08-building-a-proactive-cache-strategy-in-next-js-from-cold-loads-to-instant-hits.mdx
+++ b/content/blog/2026-01-08-building-a-proactive-cache-strategy-in-next-js-from-cold-loads-to-instant-hits.mdx
@@ -2,7 +2,7 @@
 title: "Building a Proactive Cache Strategy in Next.js: From Cold Loads to Instant Hits"
 date: "2026-01-08"
 excerpt: "How I eliminated cold start delays in AustinsElite with a custom cache warming system using background jobs and dedicated controllers."
-tags: ["Next.js", "Performance", "Caching", "Full-Stack", "Developer Experience"]
+tags: ["Performance", "Caching", "Full-Stack", "Developer Experience", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Cold Cache Problem That Killed Our First Load
