--- a/content/blog/2026-01-09-how-we-fixed-broken-geospatial-queries-in-next-js-by-ditching-bound-parameters.mdx
+++ b/content/blog/2026-01-09-how-we-fixed-broken-geospatial-queries-in-next-js-by-ditching-bound-parameters.mdx
@@ -2,7 +2,7 @@
 title: "How We Fixed Broken Geospatial Queries in Next.js by Ditching Bound Parameters"
 date: "2026-01-09"
 excerpt: "Laravel's PDO SQLite layer was silently breaking our geospatial queries—here's how inline parameter binding saved venue search in AustinsElite."
-tags: ["Next.js", "Laravel", "SQLite", "geospatial queries", "PDO", "performance optimization"]
+tags: ["Laravel", "SQLite", "geospatial queries", "PDO", "performance optimization", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Search That Wasn’t Working
