--- a/content/blog/2026-01-10-how-we-scaled-seo-infrastructure-with-static-sitemap-generation-in-next-js-larav.mdx
+++ b/content/blog/2026-01-10-how-we-scaled-seo-infrastructure-with-static-sitemap-generation-in-next-js-larav.mdx
@@ -2,7 +2,7 @@
 title: "How We Scaled SEO Infrastructure with Static Sitemap Generation in Next.js + Laravel"
 date: "2026-01-10"
 excerpt: "We built a hybrid static sitemap generator using Laravel Artisan to serve Next.js content, improving crawl efficiency and reducing server load."
-tags: ["Next.js", "Laravel", "SEO", "Sitemaps", "Performance", "Hybrid Architecture"]
+tags: ["Laravel", "SEO", "Sitemaps", "Performance", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The SEO Scalability Problem in a Hybrid App
