--- a/content/blog/2026-01-11-how-we-scaled-programmatic-seo-in-next-js-memory-efficient-sitemap-generation-fo.mdx
+++ b/content/blog/2026-01-11-how-we-scaled-programmatic-seo-in-next-js-memory-efficient-sitemap-generation-fo.mdx
@@ -2,7 +2,7 @@
 title: "How We Scaled Programmatic SEO in Next.js: Memory-Efficient Sitemap Generation for Thousands of Pages"
 date: "2026-01-11"
 excerpt: "How we slashed memory usage by 70% when generating sitemaps for 10k+ SEO pages in Next.js using chunked streaming and smart data loading."
-tags: ["Next.js", "SEO", "Performance Optimization", "Sitemaps", "Full-Stack Development"]
+tags: ["SEO", "Performance Optimization", "Sitemaps", "Full-Stack Development"]
 author: "Ryan Dashwood"
 ---
 ## The memory bottleneck in generating sitemaps for 10k+ SEO pages
