--- a/content/blog/2026-01-12-how-we-unified-lead-tracking-across-legacy-and-modern-systems-in-austinselite.mdx
+++ b/content/blog/2026-01-12-how-we-unified-lead-tracking-across-legacy-and-modern-systems-in-austinselite.mdx
@@ -2,7 +2,7 @@
 title: "How We Unified Lead Tracking Across Legacy and Modern Systems in AustinsElite"
 date: "2026-01-12"
 excerpt: "Syncing lead status between a 15-year-old PHP app and a new Next.js frontend taught us hard lessons in event-driven design and data consistency."
-tags: ["full-stack", "legacy migration", "event-driven architecture", "data synchronization", "Next.js", "Laravel"]
+tags: ["full-stack", "legacy migration", "event-driven architecture", "data synchronization", "Laravel", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Two Systems, One Problem
