--- a/content/blog/2026-01-13-how-we-streamlined-venue-data-management-in-next-js-with-centralized-configurati.mdx
+++ b/content/blog/2026-01-13-how-we-streamlined-venue-data-management-in-next-js-with-centralized-configurati.mdx
@@ -2,7 +2,7 @@
 title: "How We Streamlined Venue Data Management in Next.js with Centralized Configuration"
 date: "2026-01-13"
 excerpt: "We unified AustinsElite's venue UIs and features with a single config file, making theming and iteration faster and more consistent."
-tags: ["Next.js", "React", "configuration", "theming", "frontend architecture", "developer experience"]
+tags: ["React", "configuration", "theming", "frontend architecture", "developer experience", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem: Chaos in Venue UIs
