--- a/content/blog/2026-01-14-how-we-automated-seo-friendly-content-generation-in-next-js-at-scale.mdx
+++ b/content/blog/2026-01-14-how-we-automated-seo-friendly-content-generation-in-next-js-at-scale.mdx
@@ -2,7 +2,7 @@
 title: "How We Automated SEO-Friendly Content Generation in Next.js at Scale"
 date: "2026-01-14"
 excerpt: "How we built a dynamic, SEO-optimized content pipeline in Next.js using real-time data, smart indexing rules, and auto-generated Open Graph images."
-tags: ["Next.js", "SEO", "Programmatic SEO", "Dynamic Content", "Open Graph", "Web Performance"]
+tags: ["SEO", "Programmatic SEO", "Dynamic Content", "Open Graph", "Web Performance"]
 author: "Ryan Dashwood"
 ---
 ## Building the Feature-in-X Content Pipeline
