--- a/content/blog/2026-01-16-why-we-ditched-third-party-analytics-for-local-lead-tracking-in-our-next-js-app.mdx
+++ b/content/blog/2026-01-16-why-we-ditched-third-party-analytics-for-local-lead-tracking-in-our-next-js-app.mdx
@@ -2,7 +2,7 @@
 title: "Why We Ditched Third-Party Analytics for Local Lead Tracking in Our Next.js App"
 date: "2026-01-16"
 excerpt: "We replaced Umami with GA4 and custom lead tracking to gain better insights, performance, and control in our SaaS dashboard."
-tags: ["Next.js", "GA4", "analytics", "lead tracking", "data ownership"]
+tags: ["GA4", "analytics", "lead tracking", "data ownership", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The Problem with Umami for Lead-Driven SaaS
