--- a/content/blog/2026-01-17-how-we-automated-affiliate-attribution-audits-in-a-high-traffic-next-js-app.mdx
+++ b/content/blog/2026-01-17-how-we-automated-affiliate-attribution-audits-in-a-high-traffic-next-js-app.mdx
@@ -2,7 +2,7 @@
 title: "How We Automated Affiliate Attribution Audits in a High-Traffic Next.js App"
 date: "2026-01-17"
 excerpt: "Building a console-driven audit system to catch and fix lead credit discrepancies in a live affiliate platform."
-tags: ["Next.js", "data integrity", "affiliate marketing", "audit systems", "Node.js", "full-stack"]
+tags: ["data integrity", "affiliate marketing", "audit systems", "Node.js", "full-stack"]
 author: "Ryan Dashwood"
 ---
 ## The Cost of a Misattributed Lead
