--- a/content/blog/2026-01-18-how-we-scaled-seo-at-austinselite-building-dynamic-image-sitemaps-and-programmat.mdx
+++ b/content/blog/2026-01-18-how-we-scaled-seo-at-austinselite-building-dynamic-image-sitemaps-and-programmat.mdx
@@ -2,7 +2,7 @@
 title: "How We Scaled SEO at AustinsElite: Building Dynamic Image Sitemaps and Programmatic Page Generation"
 date: "2026-01-18"
 excerpt: "We automated image sitemaps and SEO page generation in our Laravel 12 app to scale search visibility ahead of peak season."
-tags: ["SEO", "Next.js", "Laravel", "Sitemaps", "Programmatic SEO", "Full-Stack"]
+tags: ["SEO", "Laravel", "Sitemaps", "Programmatic SEO", "Full-Stack", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## The SEO Bottleneck We Couldn’t Ignore
