--- a/content/blog/2026-01-20-laying-the-foundation-for-a-scalable-venue-directory-inside-the-initial-commit-o.mdx
+++ b/content/blog/2026-01-20-laying-the-foundation-for-a-scalable-venue-directory-inside-the-initial-commit-o.mdx
@@ -2,7 +2,7 @@
 title: "Laying the Foundation for a Scalable Venue Directory: Inside the Initial Commit of Venue Scout"
 date: "2026-01-20"
 excerpt: "How I structured Venue Scout’s initial commit for scalability, from modular city directories to flexible amenity tagging in Next.js."
-tags: ["Next.js", "React", "Scalable Architecture", "Data Modeling", "Directory App", "Frontend Engineering"]
+tags: ["React", "Scalable Architecture", "Data Modeling", "Directory App", "Frontend Engineering", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## Starting Small, Designing Big
