--- a/content/blog/2024-05-04-modernizing-legacy-laravel-frontends-how-we-integrated-undraw-svgs-and-component.mdx
+++ b/content/blog/2024-05-04-modernizing-legacy-laravel-frontends-how-we-integrated-undraw-svgs-and-component.mdx
@@ -2,7 +2,7 @@
 title: "Modernizing Legacy Laravel Frontends: How We Integrated UnDraw SVGs and Component Libraries in a Next.js Migration"
 date: "2024-05-04"
 excerpt: "How we upgraded a Laravel 12 app’s frontend with Next.js, UnDraw SVGs, and clean component architecture for better UX and scalability."
-tags: ["Laravel", "Next.js", "Frontend Migration", "SVG", "Component Design", "React"]
+tags: ["Laravel", "Frontend Migration", "SVG", "Component Design", "React", "Hybrid Architecture"]
 author: "Ryan Dashwood"
 ---
 ## From Monolith to Modern: Rethinking the Frontend During a Laravel 12 Rebuild
